log/build_2023-05-02_17-37-46/jpjc_qr/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/triton_08/tello_jp_jc_ws/install/jpjc_qr/lib/python3.10/site-packages/jpjc_qr/qr.py", line 52
    elif msg.data == "finish" and self.current_scenar = "traveling":
                                                      ^
SyntaxError: invalid syntax

